update to assignment title

--- a/views/student/student_subject.ejs
+++ b/views/student/student_subject.ejs
@@ -96,7 +96,7 @@
                         filteredAssignments.forEach(assignment => { %>
                             <div id="activity">
                                 <a href="/student_dashboard/<%= subjectName %>/<%= assignment.assignmentId %>">
-                                    Click here to complete <strong><%= assignment.title %></strong>
+                                    Click here to complete.</strong>
                                 </a>
                                 <p style="font-size: 80%;">Due: <%= formatDate(assignment.duedate) %></p>
                             </div>
