parent feedback page

--- a/views/parent/parent_dashboard.ejs
+++ b/views/parent/parent_dashboard.ejs
@@ -142,9 +142,9 @@
         <img src="/graphics/Logo.png" alt="Website Logo" />
       <!-- <p class="fw-bold">Counselor Dashboard</p> -->
       <div class="nav-links">
-        <div id="my-sections" class="active">Chat</div>
+        <div id="my-sections" class="active">Dashboard</div>
         <div id="uploads">Feedback</div>
-        <div id="reminders">Work To Do</div>
+        <!-- <div id="reminders">Work To Do</div> -->
       </div>
 
       <div class="dropdown">
