--- a/views/parent/parent_dashboard.ejs
+++ b/views/parent/parent_dashboard.ejs
@@ -159,7 +159,8 @@
     <div class="content">
       <!-- Left Section Cards -->
       <div class="left-section">
-        <p class="sections-label">STUDENT NAME: </p>
+        <h2 class="section-title">Welcome, <%= parent.name %> !</h2>
+        <p class="sections-label">Student name: <%= students.name %></p>
         <p class="sections-label">Progress Report </p>
       </div>
     </div>  
