--- a/views/student/student_submission.ejs
+++ b/views/student/student_submission.ejs
@@ -297,7 +297,7 @@
             window.location.href = "/student_dashboard/<%= subjectName %>/activity/submission";
         });
         document.getElementById("feedback").addEventListener("click", function() {
-            window.location.href = "/student_dashboard/<%= subjectName %>/activity/feedback";
+            window.location.href = "/student_dashboard/<%= subjectName %>/activity/submission/feedback";
         });
         document.getElementById("back").addEventListener("click", function() {
             window.location.href = "/student_dashboard";
