--- a/views/student/student_feedback.ejs
+++ b/views/student/student_feedback.ejs
@@ -146,7 +146,7 @@
             window.location.href = "/student_dashboard/<%= subjectName %>/activity/submission";
         });
         document.getElementById("feedback").addEventListener("click", function() {
-            window.location.href = "/student_dashboard/feedback";
+            window.location.href = "/student_dashboard/<%= subjectName %>/activity/submission/feedback";
         });
         document.getElementById("back").addEventListener("click", function() {
             window.location.href = "/student_dashboard";
